--- a/css/main.css
+++ b/css/main.css
@@ -4,28 +4,15 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
 body {
   height: 100vh;
-  font-family: "Open Sans", sans-serif;
-  background-color: #333;
-  font-size: 3.6rem;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 100px 500px 300px;
-  gap: 30px 100px;
-}
-
-.grid-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #297ddf;
-  border: 3px solid black;
-}
-
-.grid-item:nth-child(even) {
-  background-color: #34e559;
+  background-color: #232323;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.6rem;
+  color: #fff;
 }/*# sourceMappingURL=main.css.map */
