--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,6 @@
 @use 'utilities/reset';
 @use 'utilities/animations';
 @use 'utilities/colors' as *;
-@use 'utilities/small';
-@use 'utilities/medium';
-@use 'utilities/large';
 
 // font-family: 'Cinzel', serif;
 
@@ -19,12 +16,6 @@ body {
 	max-width: 1200px;
 	width: 100%;
 }
-h1.company-name {
-	margin-bottom: 0.5em;
-	font-size: 3rem;
-	font-family: 'Cinzel', serif;
-	color: $gold;
-}
 //  header
 .header {
 	display: grid;
@@ -33,6 +24,12 @@ h1.company-name {
 	height: 100vh;
 	position: relative;
 	overflow: hidden;
+	.company-name {
+		margin-bottom: 0.5em;
+		font-size: 3rem;
+		font-family: 'Cinzel', serif;
+		color: $gold;
+	}
 	&__text {
 		display: grid;
 		justify-content: center;
@@ -127,18 +124,9 @@ h1.company-name {
 		&:hover {
 			color: $gold;
 		}
-		&::before {
-			position: absolute;
-			top: 0;
-			left: 0;
-			content: '';
-			width: 100%;
-			height: 100%;
-			border: 1px solid $gold;
-			opacity: 0;
-			&:hover::before {
-				animation: pulse 1s;
-			}
-		}
 	}
 }
+
+@import 'utilities/small';
+@import 'utilities/medium';
+@import 'utilities/large';
